expose private payload access history
